[package]
name = "oauth-proxy-rs"
version = "0.1.0"
authors = ["Untoldwind <landru@untoldwind.net>"]
edition = "2018"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
warp = { version = "0", default-features = false }
reqwest = { version = "0", default-features = false, features = ["stream"]}
clap = "3.0.0-beta.5"
jwt-simple = "0"
openid = "0"
log = "0"
tracing = "0"
tracing-subscriber = { version = "0", features = ["json"] }
futures = "0"
bytes = "1"
headers = "0"
chrono = "0"
cookie = "0"
time = "0.2"
serde = "1"

[profile.release]
opt-level = 3
debug = false
lto = true
panic = "abort"
