[package]
name = "oauth-proxy-rs"
version = "0.1.5"
authors = ["Untoldwind <landru@untoldwind.net>"]
edition = "2018"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
warp = { version = "0", default-features = false }
reqwest = { version = "0", default-features = false, features = ["stream"]}
clap = { version = "4", features = ["cargo", "derive", "env"] }
openid = "0"
log = "0"
tracing = "0"
tracing-subscriber = { version = "0", features = ["json"] }
futures = "0"
bytes = "1"
headers = "0"
chrono = "0"
cookie = "0"
time = "0"
serde = "1"
hmac-sha256 = { version = "1", features = ["traits"] }
digest = "0"
uuid = { version = "0", features = ["v4"] }
base64 = "0"

[profile.release]
opt-level = 3
debug = false
lto = true
# panic = "abort"

[target.'x86_64-unknown-linux-musl'.dependencies]
openssl-sys = { version = "0", features = ["vendored"] }
